--- a/Jupyter/train.ipynb
+++ b/Jupyter/train.ipynb
@@ -2,45 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/runpy.py\", line 174, in _run_module_as_main\n",
-      "    \"__main__\", fname, loader, pkg_name)\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/runpy.py\", line 72, in _run_code\n",
-      "    exec code in run_globals\n",
-      "  File \"/Library/Python/2.7/site-packages/pip-21.0.1-py2.7.egg/pip/__main__.py\", line 21, in <module>\n",
-      "    from pip._internal.cli.main import main as _main\n",
-      "  File \"/Library/Python/2.7/site-packages/pip-21.0.1-py2.7.egg/pip/_internal/cli/main.py\", line 60\n",
-      "    sys.stderr.write(f\"ERROR: {exc}\")\n",
-      "                                   ^\n",
-      "SyntaxError: invalid syntax\n",
-      "\u001b[33mWARNING: You are using pip version 21.1.3; however, version 21.3.1 is available.\n",
-      "You should consider upgrading via the '/usr/local/opt/python@3.9/bin/python3.9 -m pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gpt_2_simple'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/w7/336w714j3_z9zybd17z8hjg40000gn/T/ipykernel_21464/2799108050.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'python -m pip install edlib --target PATH'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip3 install -q gpt-2-simple'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgpt_2_simple\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgpt2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#from google.colab import files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gpt_2_simple'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip3 install -q gpt-2-simple\n",
+    "!pip install -q gpt-2-simple\n",
     "import gpt_2_simple as gpt2\n",
-    "from datetime import datetime\n",
-    "#from google.colab import files"
+    "from datetime import datetime"
    ]
   },
   {
@@ -63,30 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name = \"tiny-shakespeare.txt\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# prepare the training session by attributing a variable named sess\n",
     "sess = gpt2.start_tf_sess()\n",
-    "\n",
+    "# set the name of our text file (found in this sampe folder)\n",
+    "file_name = \"shakespeare.txt\"\n",
+    "# start the training\n",
     "gpt2.finetune(sess,\n",
     "              dataset=file_name,\n",
     "              model_name='124M',\n",
-    "              steps=100,#1000\n",
+    "              steps=1000,\n",
     "              restore_from='fresh',\n",
     "              run_name='run1',\n",
-    "              print_every=10,\n",
-    "              sample_every=100,#200\n",
-    "              save_every=100#500\n",
+    "              print_every=100,\n",
+    "              sample_every=200,\n",
+    "              save_every=500\n",
     "              )"
    ]
   },
@@ -96,7 +58,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# when the retraining is done, generate some text\n",
     "gpt2.generate(sess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is a more sophisticated text generation command\n",
+    "gpt2.generate(sess,\n",
+    "              length=250,\n",
+    "              temperature=0.7,\n",
+    "              prefix=\"JULIET:\",\n",
+    "              nsamples=1,\n",
+    "              batch_size=1\n",
+    "              )"
    ]
   }
  ],
